src/parsers/pegjs-parsers/tex.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

var Node = require("./texParserNode.js");

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseExpression,

      peg$c0 = peg$otherExpectation("expression"),
      peg$c1 = peg$otherExpectation("operation or factor"),
      peg$c2 = "=",
      peg$c3 = peg$literalExpectation("=", false),
      peg$c4 = function(head, tail) {
          return tail.reduce(function(result, element) {
            return new Node("operator" , [result, element[3]], { name: element[1], operatorType: 'infix' });
          }, head);
        },
      peg$c5 = "\\",
      peg$c6 = peg$literalExpectation("\\", false),
      peg$c7 = function(head, title) { return title; },
      peg$c8 = "approx",
      peg$c9 = peg$literalExpectation("approx", false),
      peg$c10 = "leq",
      peg$c11 = peg$literalExpectation("leq", false),
      peg$c12 = "geq",
      peg$c13 = peg$literalExpectation("geq", false),
      peg$c14 = "neq",
      peg$c15 = peg$literalExpectation("neq", false),
      peg$c16 = "gg",
      peg$c17 = peg$literalExpectation("gg", false),
      peg$c18 = "ll",
      peg$c19 = peg$literalExpectation("ll", false),
      peg$c20 = "notin",
      peg$c21 = peg$literalExpectation("notin", false),
      peg$c22 = "ni",
      peg$c23 = peg$literalExpectation("ni", false),
      peg$c24 = "in",
      peg$c25 = peg$literalExpectation("in", false),
      peg$c26 = "+",
      peg$c27 = peg$literalExpectation("+", false),
      peg$c28 = "-",
      peg$c29 = peg$literalExpectation("-", false),
      peg$c30 = "*",
      peg$c31 = peg$literalExpectation("*", false),
      peg$c32 = "/",
      peg$c33 = peg$literalExpectation("/", false),
      peg$c34 = "\\cdot",
      peg$c35 = peg$literalExpectation("\\cdot", false),
      peg$c36 = function(head) { return "cdot"; },
      peg$c37 = function(head, tail) {
          if(options.autoMult){
            return tail.reduce(function(result, element) {
              return new Node("automult" , [result, element[1]]);
            }, head);
          } else {
            error('invalid syntax, hint: missing * sign');
          }
        },
      peg$c38 = function(base, exp, fac) {
          if (exp) base = new Node("operator", [base, exp], { name: '^', operatorType: 'infix' });
          if (fac) base = new Node("operator", [base], { name: '!', operatorType: 'postfix' });
          return base;
        },
      peg$c39 = ",",
      peg$c40 = peg$literalExpectation(",", false),
      peg$c41 = function(head, tail) {
            if (tail.length){
              return new Node("delimiter", [head].concat(tail.map(a => a[3])), { name: ',' });
            }
            return [head];
          },
      peg$c42 = peg$otherExpectation("functions"),
      peg$c43 = function(n) {return n;},
      peg$c44 = "operatorname",
      peg$c45 = peg$literalExpectation("operatorname", false),
      peg$c46 = "{",
      peg$c47 = peg$literalExpectation("{", false),
      peg$c48 = "}",
      peg$c49 = peg$literalExpectation("}", false),
      peg$c50 = function(n) {
            if(!options.operatorNames.indexOf(n)>-1)
              error("function name \"" + n + "\" is invalid!");
            return n;
          },
      peg$c51 = function(name, exp, arg) {
          let func = new Node('function', [arg], {name, isBuiltIn:true});
          if(!exp) return func;
          else return new Node("operator", [func, exp], { name: '^', operatorType: 'infix' });
        },
      peg$c52 = function(name) { return options.functions.indexOf(name)>-1; },
      peg$c53 = function(name, parentheses) { return new Node('function', parentheses, { name }); },
      peg$c54 = "(",
      peg$c55 = peg$literalExpectation("(", false),
      peg$c56 = ")",
      peg$c57 = peg$literalExpectation(")", false),
      peg$c58 = function(s) {return s;},
      peg$c59 = "\\left(",
      peg$c60 = peg$literalExpectation("\\left(", false),
      peg$c61 = "\\right)",
      peg$c62 = peg$literalExpectation("\\right)", false),
      peg$c63 = function(args) { return new Node('()', args); },
      peg$c64 = "|",
      peg$c65 = peg$literalExpectation("|", false),
      peg$c66 = function(e) {return e;},
      peg$c67 = "\\left|",
      peg$c68 = peg$literalExpectation("\\left|", false),
      peg$c69 = "\\right|",
      peg$c70 = peg$literalExpectation("\\right|", false),
      peg$c71 = function(expr) { return new Node('||', [expr]) },
      peg$c72 = function(name) {
        return new Node('id', null, {name, isBuiltIn:true})
      },
      peg$c73 = "\\sqrt",
      peg$c74 = peg$literalExpectation("\\sqrt", false),
      peg$c75 = function(exp, arg) {
          exp = exp || new Node('number', null, { value:2 });
          return new Node("function", [arg, exp], { name:'sqrt', isBuiltIn:true });
        },
      peg$c76 = "int",
      peg$c77 = peg$literalExpectation("int", false),
      peg$c78 = "sum",
      peg$c79 = peg$literalExpectation("sum", false),
      peg$c80 = "prod",
      peg$c81 = peg$literalExpectation("prod", false),
      peg$c82 = function(n, sub, sup) { return [sub, sup]; },
      peg$c83 = function(n, sup, sub) { return [sub, sup]; },
      peg$c84 = function(n, subsup, arg) {
          return new Node(n, [...subsup, arg]);
        },
      peg$c85 = "\\frac",
      peg$c86 = peg$literalExpectation("\\frac", false),
      peg$c87 = function(frst, scnd) { return [frst, scnd]; },
      peg$c88 = function(args) { return new Node("frac", args); },
      peg$c89 = peg$otherExpectation("superscript"),
      peg$c90 = "^",
      peg$c91 = peg$literalExpectation("^", false),
      peg$c92 = function(arg) {return arg;},
      peg$c93 = peg$otherExpectation("subscript"),
      peg$c94 = "_",
      peg$c95 = peg$literalExpectation("_", false),
      peg$c96 = peg$otherExpectation("function argument"),
      peg$c97 = peg$otherExpectation("digit or char"),
      peg$c98 = /^[a-z0-9]/i,
      peg$c99 = peg$classExpectation([["a", "z"], ["0", "9"]], false, true),
      peg$c100 = function() {
          let txt = text();
          if(isNaN(txt)){
            return new Node("id", null, { name: txt });
          } else {
            return new Node("number", null, {value:parseFloat(txt)});
          }
        },
      peg$c101 = peg$otherExpectation("number"),
      peg$c102 = function(sign) {
          let value = parseFloat(text().replace(/[ \t\n\r]/g, ''));
          return new Node('number', null, {value});
        },
      peg$c103 = /^[0-9]/,
      peg$c104 = peg$classExpectation([["0", "9"]], false, false),
      peg$c105 = function() {
          let value = parseFloat(text().replace(/[ \t\n\r]/g, ''));
          return new Node('number', null, {value});
        },
      peg$c106 = ".",
      peg$c107 = peg$literalExpectation(".", false),
      peg$c108 = peg$otherExpectation("name"),
      peg$c109 = function() {
          let name = text().replace(/[\s\{\}]*/g, ''); 
          return new Node('id', null, {name})
        },
      peg$c110 = function() { return options.singleCharName },
      peg$c111 = function() {
          return text().replace(/[\s\{\}]*/g, ''); 
        },
      peg$c112 = "[",
      peg$c113 = peg$literalExpectation("[", false),
      peg$c114 = "]",
      peg$c115 = peg$literalExpectation("]", false),
      peg$c116 = function(expr) { return expr; },
      peg$c117 = peg$otherExpectation("letter or digit"),
      peg$c118 = /^[a-zA-Z0-9]/,
      peg$c119 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c120 = peg$otherExpectation("letter"),
      peg$c121 = /^[a-zA-Z]/,
      peg$c122 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c123 = peg$otherExpectation("newline"),
      peg$c124 = "\n",
      peg$c125 = peg$literalExpectation("\n", false),
      peg$c126 = "\r\n",
      peg$c127 = peg$literalExpectation("\r\n", false),
      peg$c128 = "\r",
      peg$c129 = peg$literalExpectation("\r", false),
      peg$c130 = "\u2028",
      peg$c131 = peg$literalExpectation("\u2028", false),
      peg$c132 = "\u2029",
      peg$c133 = peg$literalExpectation("\u2029", false),
      peg$c134 = peg$otherExpectation("space or tab"),
      peg$c135 = /^[ \t]/,
      peg$c136 = peg$classExpectation([" ", "\t"], false, false),
      peg$c137 = peg$otherExpectation("whitespace"),
      peg$c138 = "\\ ",
      peg$c139 = peg$literalExpectation("\\ ", false),
      peg$c140 = "!",
      peg$c141 = peg$literalExpectation("!", false),
      peg$c142 = "sinh",
      peg$c143 = peg$literalExpectation("sinh", false),
      peg$c144 = "cosh",
      peg$c145 = peg$literalExpectation("cosh", false),
      peg$c146 = "tanh",
      peg$c147 = peg$literalExpectation("tanh", false),
      peg$c148 = "sin",
      peg$c149 = peg$literalExpectation("sin", false),
      peg$c150 = "cos",
      peg$c151 = peg$literalExpectation("cos", false),
      peg$c152 = "tan",
      peg$c153 = peg$literalExpectation("tan", false),
      peg$c154 = "sec",
      peg$c155 = peg$literalExpectation("sec", false),
      peg$c156 = "csc",
      peg$c157 = peg$literalExpectation("csc", false),
      peg$c158 = "cot",
      peg$c159 = peg$literalExpectation("cot", false),
      peg$c160 = "arcsin",
      peg$c161 = peg$literalExpectation("arcsin", false),
      peg$c162 = "arccos",
      peg$c163 = peg$literalExpectation("arccos", false),
      peg$c164 = "arctan",
      peg$c165 = peg$literalExpectation("arctan", false),
      peg$c166 = "arcsec",
      peg$c167 = peg$literalExpectation("arcsec", false),
      peg$c168 = "arccsc",
      peg$c169 = peg$literalExpectation("arccsc", false),
      peg$c170 = "arccot",
      peg$c171 = peg$literalExpectation("arccot", false),
      peg$c172 = "ln",
      peg$c173 = peg$literalExpectation("ln", false),
      peg$c174 = /^[a-z]/i,
      peg$c175 = peg$classExpectation([["a", "z"]], false, true),
      peg$c176 = function(a) { return options.texOperators1.indexOf(a.join('')) === -1 },
      peg$c177 = function(a) {
          let name = text();
          if(options.builtInNames.indexOf(name)>-1) return name;
          if(options.builtInFunctions.indexOf(name) > -1 || options.functions.indexOf(name) > -1){
            error(`give the function "${name}" its arguments! can't use the function as variable!`);
          }
          error('undefined name "' + name + '"');
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseOperation0();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseOperation0() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation1();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation1();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation1();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseOperation1() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
